# ghostty_ultimate

./: LICENSE  README.md  index.html  package-lock.json  package.json  setup-ghostty-ultimate.sh  vite.config.ts
release/Ghostty Ultimate.app/Contents/: Info.plist
release/Ghostty Ultimate.app/Contents/Resources/: Ghostty Ultimate.icns
src/: App.svelte
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/config/: defaults.rs  mod.rs  palette.rs  schema.rs  sections.rs
src-tauri/src/executor/: parser.rs  runner.rs
src-tauri/src/generator/: applier.rs  engine.rs  filters.rs  mod.rs
src-tauri/src/generator/templates/: clean_artifacts.sh.tera  done.sh.tera  fastfetch.sh.tera  ghostty.sh.tera  git.sh.tera  header.sh.tera  main.sh.tera  neovim.sh.tera  packages.sh.tera  starship.sh.tera  themes.sh.tera  tmux.sh.tera  tmux_scripts.sh.tera  tool_configs.sh.tera  zsh_plugins.sh.tera  zshrc.sh.tera
src-tauri/src/generator/templates/apply/: atuin_config.tera  bat_theme.tera  btop_config.tera  fastfetch_config.tera  ghostty_config.tera  ghostty_theme.tera  lazygit_config.tera  neovim_config.tera  starship_config.tera  tmux_config.tera  yazi_config.tera  yazi_theme.tera  zshrc_config.tera
src-tauri/src/profiles/: manager.rs
src/lib/api/: invoke.ts  types.ts
src/lib/components/execution/: ExecutionPanel.svelte
src/lib/components/layout/: Header.svelte  MainPanel.svelte  Sidebar.svelte  StatusBar.svelte
src/lib/state/: config.svelte.ts  execution.svelte.ts  ui.svelte.ts
(+24 files in other folders)
