[package]
name = "ghostty-ultimate-ui"
version = "0.1.0"
description = "Ghostty Ultimate UI — Configure your terminal, visually"
authors = ["you"]
edition = "2021"

[lib]
name = "ghostty_ultimate_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tera = "1"
tokio = { version = "1", features = ["full"] }
regex = "1"
dirs = "5"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
